# asnap

./: Cargo.toml  README.md
src/: desktop.rs  main.rs  ocr.rs  recorder.rs  screenshot.rs  stitch.rs
